--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "description": "For File Upload Excel To JSON",
     "license": "MIT",
     "require": {
-        "phpoffice/phpspreadsheet": "1.8.2"
+        "phpoffice/phpspreadsheet": "^1.10"
     }
 }
